# Backgammon

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  InstallationLog.txt  README.md  build.bat  run.bat  test-run.bat  test-run2.bat
.claude/: settings.json
.claude/harness/: claude-progress.txt  features.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml
.golutra/: command.json  local.json  roadmap.json  workspace.json
docs/: CPP11_TO_CPP20_UPGRADE.md  DDD_ARCHITECTURE.md
qml/: BoardView.qml  ControlPanel.qml  GameUI.qml  ResultDialog.qml  WinRateChart.qml  main.qml
resources/: difficulty_config.json  opening_book.json
resources/qml/: HistoryDialog.qml  LoginDialog.qml  ResultDialog.qml
src/: AiWorker.cpp  AiWorker.h  ComputerMove.cpp  ComputerMove.h  Evaluation.cpp  Evaluation.h  achievementdialog.cpp  achievementdialog.h  achievementmanager.cpp  achievementmanager.h  backgammon.cpp  backgammon.h  backgammon.qrc  backgammon.ui  gamebridge.cpp  gamebridge.h  gameclient.cpp  gameclient.h  gameserver.cpp  gameserver.h  historydialog.cpp  historydialog.h  judgeWinner.cpp  judgeWinner.h  logindialog.cpp  logindialog.h  main.cpp  networkdialog.cpp  networkdialog.h  playerstatsstore.cpp  playerstatsstore.h  replaydialog.cpp  replaydialog.h  resultdialog.cpp  resultdialog.h  sgf_serializer.cpp  sgf_serializer.h  soundmanager.cpp  soundmanager.h  sqlitestore.cpp  (+4 more)
src/application/: application.h  game_service.cpp  game_service.h
src/domain/: domain.h
src/domain/aggregates/: aggregates.h  game_board.cpp  game_board.h
src/domain/services/: ai_engine.cpp  ai_engine.h  board_evaluator.cpp  board_evaluator.h  difficulty_config.cpp  difficulty_config.h  opening_book.cpp  opening_book.h  services.h  transposition_table.cpp  transposition_table.h  win_detector.cpp  win_detector.h
src/domain/values/: game_result.h  move.h  piece.h  position.h  values.h
tests/: test_unit.cpp
tools/: set_msys_mirror.sh
tools/msys64/msys64/etc/: hosts
tools/msys64/msys64/etc/pacman.d/: mirrorlist.mingw  mirrorlist.mingw.bak2  mirrorlist.msys  mirrorlist.msys.bak2
tools/msys64/msys64/etc/pacman.d/gnupg/: pubring.gpg  pubring.gpg~  tofu.db  trustdb.gpg
tools/msys64/msys64/etc/pacman.d/gnupg/openpgp-revocs.d/: B488369E8B47F701F511093082C2BF8397063046.rev
tools/msys64/msys64/etc/pacman.d/gnupg/private-keys-v1.d/: 6791F49C3142B8C184EA7B6852826453A5787F56.key
tools/msys64/msys64/ucrt64/etc/ssl/misc/: CA.pl
tools/msys64/msys64/ucrt64/include/: jconfig.h  jmorecfg.h  pnglibconf.h
tools/msys64/msys64/ucrt64/include/QtCore/: qconfig.h  qdeadlinetimer.h  qendian.h  qrandom.h  qt_windows.h
tools/msys64/msys64/ucrt64/include/QtGui/: qtgui-config.h
tools/msys64/msys64/ucrt64/include/dbus-1.0/dbus/: dbus-macros.h
tools/msys64/msys64/ucrt64/include/gnutls/: gnutls.h
tools/msys64/msys64/ucrt64/include/openssl/: asn1.h  asn1t.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  core_names.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509_acert.h  x509_vfy.h  x509v3.h
tools/msys64/msys64/ucrt64/include/unicode/: brkiter.h  calendar.h  dcfmtsym.h  dtfmtsym.h  format.h  locid.h  messageformat2.h  messageformat2_arguments.h  messageformat2_data_model.h  messageformat2_formattable.h  msgfmt.h  numberformatter.h  numberrangeformatter.h  platform.h  tblcoll.h
tools/msys64/msys64/ucrt64/lib/: Qt5AccessibilitySupport.prl  Qt5Bootstrap.prl  Qt5Concurrent.prl  Qt5Core.prl  Qt5DBus.prl  Qt5Designer.prl  Qt5DesignerComponents.prl  Qt5DeviceDiscoverySupport.prl  Qt5EdidSupport.prl  Qt5EventDispatcherSupport.prl  Qt5FbSupport.prl  Qt5FontDatabaseSupport.prl  Qt5Gui.prl  Qt5Help.prl  Qt5Network.prl  Qt5OpenGL.prl  Qt5OpenGLExtensions.prl  Qt5PlatformCompositorSupport.prl  Qt5PrintSupport.prl  Qt5Sql.prl  Qt5Test.prl  Qt5ThemeSupport.prl  Qt5UiTools.prl  Qt5VulkanSupport.prl  Qt5Widgets.prl  Qt5WindowsUIAutomationSupport.prl  Qt5Xml.prl  libstdc++.dll.a-gdb.py  qtmain.prl  tkConfig.sh
tools/msys64/msys64/ucrt64/lib/cmake/CURL/: CURLConfig.cmake
tools/msys64/msys64/ucrt64/lib/cmake/DBus1/: DBus1Config.cmake  DBus1Targets-release.cmake  DBus1Targets.cmake
tools/msys64/msys64/ucrt64/lib/cmake/Qt5AccessibilitySupport/: Qt5AccessibilitySupportConfig.cmake
tools/msys64/msys64/ucrt64/lib/cmake/Qt5Concurrent/: Qt5ConcurrentConfig.cmake
tools/msys64/msys64/ucrt64/lib/cmake/Qt5Core/: Qt5CoreConfig.cmake  Qt5CoreConfigExtras.cmake
tools/msys64/msys64/ucrt64/lib/cmake/Qt5DBus/: Qt5DBusConfig.cmake  Qt5DBusConfigExtras.cmake
tools/msys64/msys64/ucrt64/lib/cmake/Qt5Designer/: Qt5DesignerConfig.cmake
tools/msys64/msys64/ucrt64/lib/cmake/Qt5Gui/: Qt5GuiConfig.cmake
tools/msys64/msys64/ucrt64/lib/girepository-1.0/: GIRepository-3.0.typelib  GLib-2.0.typelib  GLibWin32-2.0.typelib  GObject-2.0.typelib  Gio-2.0.typelib  HarfBuzz-0.0.typelib
tools/msys64/msys64/ucrt64/lib/itcl4.3.4/: itclConfig.sh
tools/msys64/msys64/ucrt64/lib/pkgconfig/: Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Designer.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Network.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5PrintSupport.pc  Qt5Sql.pc  Qt5Test.pc  Qt5UiTools.pc  Qt5Widgets.pc  Qt5Xml.pc  dbus-1.pc  double-conversion.pc  expat.pc  fontconfig.pc  formw.pc  freetype2.pc  gio-2.0.pc  gio-windows-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gnutls.pc  gobject-2.0.pc  gthread-2.0.pc  harfbuzz-gobject.pc  harfbuzz-raster.pc  harfbuzz-subset.pc  harfbuzz-vector.pc  harfbuzz.pc  icu-i18n.pc  icu-io.pc  icu-uc.pc  jsoncpp.pc  libarchive.pc  (+44 more)
tools/msys64/msys64/ucrt64/lib/python3.14/: _sysconfig_vars__win32_.json  _sysconfigdata__win32_.py  build-details.json
tools/msys64/msys64/ucrt64/lib/tdbc1.1.12/: tdbcConfig.sh
tools/msys64/msys64/ucrt64/share/gir-1.0/: GIRepository-3.0.gir  GLibWin32-2.0.gir  GioWin32-2.0.gir  HarfBuzz-0.0.gir
tools/msys64/msys64/ucrt64/share/info/: gnutls.info  gnutls.info-1  gnutls.info-2  gnutls.info-3  gnutls.info-4  gnutls.info-5  gnutls.info-6  gnutls.info-7
(+2111 files in other folders)
